decompiler/tests/snapshots/test_tool__x86_64_callconv__func042.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
 --- mil
program  58 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   44 r46: TypeID(2v1) <- Part { src: r45, offset: 0, size: 8 }
   45 r14: TypeID(2v1) <- Get(r46)
   46 r47: TypeID(2v1) <- Part { src: r45, offset: 8, size: 8 }
   47 r15: TypeID(2v1) <- Get(r47)
0x4011dd:
   48 r46: TypeID(2v1) <- Const { value: 34, size: 8 }
   49 r46: TypeID(2v1) <- Arith(Add, r46, r12)
   50 r45: TypeID(2v1) <- LoadMem { addr: r46, size: 1 }
   51 r47: TypeID(2v1) <- Part { src: r16, offset: 1, size: 7 }
   52 r16: TypeID(2v1) <- Concat { lo: r45, hi: r47 }
0x4011e1:
   53 r45: TypeID(2v1) <- Void
   54 r45: TypeID(2v1) <- Concat { lo: r45, hi: r16 }
   55 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 1 }
   56 r47: TypeID(2v1) <- SetReturnValue(r45)
   57 r47: TypeID(2v1) <- Control(Ret)


 --- ssa pre-xform
ssa program  58 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r15: ? <- Ancestral(AncestralName("RAX"))
         r48: ? <- Const { value: 34, size: 8 }
         r49: ? <- Arith(Add, r48, r11)
         r50: ? <- LoadMem { addr: r49, size: 1 }
         r51: ? <- Part { src: r15, offset: 1, size: 7 }
         r52: ? <- Concat { lo: r50, hi: r51 }
         r54: ? <- Concat { lo: r53, hi: r52 }
         r55: ? <- Part { src: r54, offset: 0, size: 1 }
         r56: ? <- SetReturnValue(r55)


 --- cfg
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r49, r50, r56]
  domtree:
    
 --- ssa
ssa program  58 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r49: ? <- ArithK(Add, r11, 34)
         r50: ? <- LoadMem { addr: r49, size: 1 }
         r56: ? <- SetReturnValue(r50)


 --- ast

T0: {
  ;
  return [pre:RSP + 34]:1
}
